--- a/01-base/index.html
+++ b/01-base/index.html
@@ -15,6 +15,10 @@
       crossorigin="anonymous"
     />
     <title>01. JS Base</title>
+
+    <script src="app.js" defer></script>
+
+
     <script src="app.js" defer></script>
     <script src="theory.js" defer></script>
   </head>
